# compare_contact_solvers

./: CMakeLists.txt  README.md  main.cpp  main2.cpp
resources/: four_bar.urdf  toro_headless.urdf
